force-app/main/default/objects/UI_Management_Element__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>