force-app/main/default/objects/UI_Management_Element__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>