force-app/main/default/objects/UI_Management_Element__mdt/fields/UI_Management__c.field-meta.xml
<CustomField>
    <fullName>UI_Management__c</fullName>
    <label>UI Management</label>
    <referenceTo>UI_Management__mdt</referenceTo>
    <relationshipLabel>UI Management Elements</relationshipLabel>
    <relationshipName>UI_Management_Elements</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>